--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
 </head>
 
 <body>
-    <ul class="nav">
-        <li class="nav-categories"><a href="#aboutme">About</a></li>
-        <li class="nav-categories"><a href="#skills">Skills</a></li>
-        <li class="nav-categories"><a href="#pro-projects">Projects</a></li>
-        <li class="nav-categories"><a href="#resume">Resume</a></li>
-        <li class="nav-categories"><a href="#contact">Contact</a></li>
-    </ul>
-    <div class="container">
-        <div class="name-box">
-            <h1 class="Name-heading">Chris Seale</h1>
-            <h3>Front End Engineer</h3>
-        </div>
-        <h2 class="h2-subheading" id="aboutme">About Me</h2>
-        <div class="both-paragraphs">
-            <p class="left-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+    <div id="navbar" class="text-center">
+        <ul class="sections">
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#resume">Resume</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </div>
+    <div id="name-section" class="text-center">
+        <h1 class="name">Chris Seale</h1>
+        <h3 class="title">Front End Engineer</h3>
+    </div>
+    <div id="constrain">
+        <div class="jump" id="about"></div>
+        <h1 class="subheading text-center">About Me</h1>
+        <div class="container">
+            <p class="para-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem
@@ -29,7 +32,7 @@
                 aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p class="right-paragraph">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+            <p class="para-right">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
                 eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
                 ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
                 qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
@@ -37,58 +40,70 @@
                 voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi
                 ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse
                 quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+            </p>
         </div>
-        <h2 class="h2-subheading" id="skills">Technical Skills</h2>
-        <div class="skills-container">
-            <p class="left-paragraph">HTML, CSS, Javascript<br> Bootstrap, JQuery, LESS<br> Photoshop, FlashMX, Illustrator<br>Typescript, NodeJS/Express</p>
-            <p class="right-paragraph">NoSQL, SQL Databases<br> Angular, PlatypusTS, PlatypusUI<br> Mobile Design, Cordova<br> Authentication, Deployment</p>
+        <div class="jump" id="skills"></div>
+        <h1 class="subheading text-center">Technical Skills</h1>
+        <div class="container">
+            <p class="para-left">HTML, CSS, Javascript<br>Bootstrap, JQuery, LESS<br>Git, NPM, APIs, REST<br>Typescript, NodeJS/Express</p>
+            <p class="para-right">NoSQL, SQL Databases<br>Angular, PlatypusTS, PlatypusUI<br>Mobile Design, Cordova<br>Authentication, Deployment</p>
         </div>
-        <h2 class="h2-subheading" id=pro-projects>Projects</h2>
-        <div class="projects">
-            <p class="paragraph-bold">Project 1</p>
-            <p class="paragraph-regular">Trima postea animal mea te, quo no veri dicta accusata. Eu numquam legimus conceptam vim, et nostro<br> admodum pro. Porro deleniti eleifend an sea, ne essent luptatum dissentias nec. Dicta vitae sit ad. Noluisse<br> prodesset quaerendum eos in, mea oratio   indoctum postulant in. Semper videre euismod id vis, id <br>viderer ceteros facilisis usu.</p>
-            <p class="paragraph-bold">Project 2</p>
-            <p class="paragraph-regular">Prima postea animal mea te, quo no veri dicta accusata. Eu numquam legimus conceptam vim, et nostro<br> admodum pro. Porro deleniti eleifend an sea, ne essent luptatum dissentias nec. Dicta vitae sit ad. Noluisse<br> prodesset quaerendum eos in, mea oratio indoctum postulant in. Semper videre euismod id vis, id <br>viderer ceteros facilisis usu.</p>
+        <div class="jump" id="projects"></div>
+        <h1 class="subheading text-center">Projects</h1>
+        <div class="container">
+            <h2 class="project-title">Project 1</h2>
+            <p class="project-descrip">This is a description. There are many like it but this one is mine. I must master this description as I must
+                master my life. Without me, this description is worthless. Without this description, I am worthless.</p>
+            <h2 class="project-title">Project 2</h2>
+            <p class="project-descrip">This is a description. There are many like it but this one is mine. I must master this description as I must
+                master my life. Without me, this description is nothing. Without this description, I am nothing.</p>
         </div>
-        <h2 class="h2-subheading" id="resume">Experience</h2>
-        <div class="experience">
-            <p class="paragraph-bold">Position 1</p>
-            <p class="under-position-paragraphs"><em><font color="#92b9c4">September 8, 2015 - Present</font></em>
-                <br>Duis aute irure dolor in reprehenderit in voluptate velit.</p>
-            <p class="paragraph-bold">Position 2</p>
-            <p class="under-position-paragraphs"><em><font color="#92b9c4">September 8, 2015 - Present</font></em>
-                <br>Ut enim ad minima veniam, quis nostrum exercitationem ullam.</p>
-            <p class="paragraph-bold">Position 3</p>
-            <p class="under-position-paragraphs"><em><font color="#92b9c4">September 8, 2015 - Present</font></em>
-                <br> Temporibus autem quibusdam et aut officiis debitis aut rerum.</p>
-            <p class="paragraph-bold">Position 4</p>
-            <p class="under-position-paragraphs"><em><font color="#92b9c4">September 8, 2015 - Present</font></em>
-                <br>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
+        <div class="jump" id="resume"></div>
+        <h1 class="subheading text-center">Experience</h1>
+        <div class="container">
+            <h2 class="project-title">Position 1</h2>
+            <p class="date">September 1, 2015 - present</p>
+            <p class="experience-description">Bitters brunch food truck viral semiotics.</p>
+            <h2 class="project-title">Position 2</h2>
+            <p class="date">September 1, 2015 - present</p>
+            <p class="experience-description">Viral street art shabby chic meditation.</p>
+            <h2 class="project-title">Position 3</h2>
+            <p class="date">September 1, 2015 - present</p>
+            <p class="experience-description">Banksy readymade skateboard.</p>
+            <h2 class="project-title">Position 4</h2>
+            <p class="date">September 1, 2015 - present</p>
+            <p class="experience-description">Distillery fashion axe tousled.</p>
+            <h2 class="project-title">Position 5</h2>
+            <p class="date">September 1, 2015 - present</p>
+            <p class="experience-description">This is a description of an experience I have. Sometimes, I throw my hands up and I'm like, "Hey everybody, I'm
+                having an experience." Then, people just stare at me.</p>
         </div>
-        <h2 class="h2-subheading">Education</h2>
-        <div class="education">
-            <p>DepotU<br> Adler School of Professional Psychology<br> East Carolina University<br> University of Alabama</p>
+        <h1 class="subheading text-center">Education</h1>
+        <div class="container">
+            <h3 class="schools">DepotU</h3>
+            <h3 class="schools">Adler</h3>
+            <h3 class="schools">East Carolina University</h3>
+            <h3 class="schools">University of Alabama</h3>
         </div>
-        <h2 class="h2-subheading" id="contact">Contact Me</h2>
-        <div class="contact-container">
-            <div class="contact-form">
+        <div class="jump" id="contact"></div>
+        <h1 class="subheading text-center">Contact Me</h1>
+        <div class="container">
+            <div class="form-style">
                 <form>
-                    NAME<br>
-                    <input type="text" name="name" class="user-field" required placeholder="Smith"><br> EMAIL
-                    <br>
-                    <input type="text" name="email" class="user-field" required placeholder="smith@example.com"><br> MESSAGE
-                    <br>
-                    <input type="text" name="message" class="user-message" required placeholder=""><br>
+                    <label for="name">Name</label>
+                    <input type="text" id="name" placeholder="Smith" required>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" placeholder="smith@example.com" required>
+                    <label for="message">Message</label>
+                    <input type="text" id="message" required>
+                    <input type="submit" id="submit" value="Send">
                 </form>
-                <button class="send-button">Send</button>
             </div>
-            <div class="space"></div>
         </div>
-        <div class="footer">
-            <h4 class="Github"><a href="https://github.com/chrisseale1">Github</a></h4>
-            <h4 class="LinkedIn"><a href="https://www.linkedin.com/">LinkedIn</a></h4>
-            <h4 class="copyright">@2015</h4>
-        </div>
+    </div>
+    <div id="footer">
+        <h4 class="links"><a href="">Github  </a><a href=""> LinkedIn</a></h4>
+        <h6 class="copyright">@2016</h6>
     </div>
 </body>
 
